# telejira

./: .gitignore  __init__.py  add_admin.py  main.py  pyproject.toml  start.bat  test.py
config/: __init__.py  settings.py
handlers/: __init__.py  admin_handlers.py  base_handler.py  issue_handlers.py  project_handlers.py  wizard_handlers.py
models/: __init__.py  enums.py  models.py  project.py
services/: __init__.py  database.py  jira_service.py  telegram_service.py
telegram_jira_bot/: .env.example  .gitignore  README.md  main.py  project structure.md  requirements.dev.txt  requirements.txt  setup.bat  setup.py
telegram_jira_bot/config/: __init__.py  settings.py
telegram_jira_bot/handlers/: __init__.py  admin_handlers.py  base_handler.py  issue_handlers.py  project_handlers.py  wizard_handlers.py
telegram_jira_bot/models/: __init__.py  enums.py  issue.py  project.py  user.py
telegram_jira_bot/services/: __init__.py  database.py  jira_service.py  telegram_service.py
telegram_jira_bot/tests/: conftest.py  test_handlers.py
telegram_jira_bot/utils/: __init__.py  constants.py  decorators.py  formatters.py  validators.py
tests/: __init__.py  conftest.py  test_models.py  test_services.py
utils/: __init__.py  decorators.py  formatters.py  keyboards.py  mappers.py  messages.py  validators.py
